회원가입 스웨거 적용
